...
\nSie können die Einrichtung später erneut starten.</string>
    <string name="firstTimeUser_confirmEnd_title">Einrichtung beenden?</string>
    <string name="firstTimeUser_done_close">Einrichtung abschließen</string>
    <string name="firstTimeUser_done_identify">Jetzt ausweisen</string>
    <string name="firstTimeUser_done_title">Sie haben Ihren Online‑Ausweis erfolgreich eingerichtet.</string>
...
    <string name="firstTimeUser_intro_body">Sie müssen Ihren Ausweis insgesamt nur einmal einrichten. Falls Sie schon über eine 6‑stellige PIN verfügen, ist Ihr Ausweis bereits eingerichtet.</string>
    <string name="firstTimeUser_intro_box">**Hinweis:** Falls Sie schon über eine persönliche 6‑stellige PIN verfügen, ist Ihr Ausweis bereits eingerichtet.</string>
    <string name="firstTimeUser_intro_startSetup">Jetzt Online-Ausweis einrichten</string>
    <string name="firstTimeUser_intro_startSetupVariation">Jetzt Online-Ausweis freischalten</string>
    <string name="firstTimeUser_intro_title">Haben Sie Ihren Online‑Ausweis bereits eingerichtet\?</string>
...
    <string name="firstTimeUser_personalPIN_confirmation">PIN zum Bestätigen wiederholen</string>
    <string name="firstTimeUser_personalPIN_error_mismatch_body">Versuchen Sie es erneut.</string>
    <string name="firstTimeUser_personalPIN_error_mismatch_title">PINs stimmen nicht überein</string>
    <string name="firstTimeUser_personalPIN_textFieldLabel_first">Eingabefeld Persönliche PIN, sechsstellig</string>
    <string name="firstTimeUser_personalPIN_textFieldLabel_second">Eingabefeld Persönliche PIN bestätigen, sechsstellig</string>
    <string name="firstTimeUser_personalPIN_title">Vergeben Sie nun Ihre persönliche Ausweis‑PIN.</string>
    <string name="firstTimeUser_personalPINIntro_continue">Persönliche Ausweis–PIN vergeben</string>
    <string name="firstTimeUser_personalPINIntro_info_body">Sie benötigen diese jedes Mal, wenn Sie die Online‑Ausweisfunktion in Zukunft nutzen.</string>
    <string name="firstTimeUser_personalPINIntro_info_title">Persönliche Ausweis–PIN gut merken</string>
...
    <string name="firstTimeUser_pinLetter_requestLetter">Nein, PIN-Rücksetzbrief bestellen</string>
    <string name="firstTimeUser_pinLetter_title">Haben Sie Ihren PIN‑Brief noch\?</string>
    <string name="firstTimeUser_pinLetter_letterPresent">Ja, PIN-Brief vorhanden</string>
    <string name="firstTimeUser_scan_body">Probieren Sie verschiedene Stellen aus. Achten Sie darauf, dass Ihr Ausweis das Gerät direkt berührt.</string>
    <string name="firstTimeUser_scan_error_button">Okay</string>
...
    <string name="firstTimeUser_scan_error_title_id_deactivated">Online-Ausweisfunktion deaktiviert</string>
    <string name="firstTimeUser_scan_error_title_pin_blocked">PIN blockiert</string>
    <string name="firstTimeUser_scan_error_title_pin_suspended">PIN suspendiert</string>
    <string name="firstTimeUser_scan_title_android">Berühren Sie Ihren Ausweis mit der Rückseite des Smartphones.</string>
    <string name="firstTimeUser_transportPIN_body">Die 5‑stellige Transport‑PIN finden Sie in Ihrem PIN‑Brief.</string>
    <string name="firstTimeUser_transportPIN_textFieldLabel">Eingabefeld Transport-PIN, fünfstellig</string>
    <string name="firstTimeUser_transportPIN_title">Geben Sie die Transport‑PIN ein.</string>
    <string name="firstTimeUser_alreadySetupConfirmation_box">**Hinweis:** Um sich mit Ihrem Ausweis im Internet zu identifizieren, brauchen Sie Ihre persönliche PIN. Gehen Sie zur Internetseite des Services, für den Sie sich ausweisen wollen. Dort können Sie die Identifizierung starten.</string>
    <string name="firstTimeUser_alreadySetupConfirmation_close">Verstanden</string>
    <string name="firstTimeUser_alreadySetupConfirmation_title">Sie sind startklar!</string>
    <string name="helpNFC_body">NFC steht für Near Field Communication. Die Technik ermöglicht den kontaktlosen Austausch von Daten über sehr kurze Strecken. Sie wird bspw. auch beim Bezahlen mit dem Smartphone an der Supermarktkasse verwendet.</string>
    <string name="helpNFC_title">So funktioniert die NFC‑Technologie</string>
    <string name="home_header_infoText">Öffnen Sie die Internetseite von  »Grundsteuererklärung für Privateigentum«. Um die Identifizierung zu starten, tippen Sie dort auf:</string>
...
\n[www.bfdi.bund.de/DE/Service/Beschwerden/beschwerden_node.html ↗](https://www.bfdi.bund.de/DE/Service/Beschwerden/beschwerden_node.html)</string>
    <string name="scan_animationAccessibilityLabel">Legen Sie Ihren Ausweis auf eine gerade Oberfläche, um Bewegungen bei dem Scanvorgang zu vermeiden. Legen Sie anschließend Ihr Smartphone auf den Ausweis. Die obere Rückseite des Smartphones sollte direkt auf dem Ausweis liegen. Warten Sie einen Moment, bis der Scanvorgang abgeschlossen wurde.</string>
    <string name="scan_helpNFC">So funktioniert die NFC-Technologie</string>
    <string name="scan_helpScanning">Mein Ausweis wird nicht erkannt</string>
    <string name="scanError_box_title">Ausweisprozess erneut starten</string>
    <string name="scanError_box_body">Aufgrund eines Fehlers müssen Sie den Ausweisprozess erneut starten.</string>
    <string name="scanError_cardBlocked_body">### Warum ist Ihr Ausweis blockiert\?
\n
...
\n- Stellen Sie sicher, dass Sie mit dem Internet verbunden sind.</string>
    <string name="scanError_cardUnreadable_title">Ihr Ausweis wurde nicht erkannt.</string>
    <string name="scanError_close">Schließen</string>
    <string name="scanError_redirect">Zurück zum Diensteanbieter</string>
    <string name="scanError_unknown_body">Ein unbekannter Fehler ist aufgetreten.</string>
    <string name="scanError_unknown_title">Es ist ein Fehler aufgetreten.</string>
...
