...
                Icon(
                    imageVector = Icons.Filled.Circle,
                    contentDescription = "",
                    modifier = Modifier
                        .align(Alignment.Center)
                        .size(10.dp)
                        .clearAndSetSemantics { testTag = "Obfuscation" }
                )
            } else {
                val textStyle = MaterialTheme.typography.titleLarge
                val fontSizeDp = with(LocalDensity.current) { textStyle.fontSize.value.dp.toSp() }

                Text(
                    text = input.toString(),
                    style = MaterialTheme.typography.titleLarge,
                    fontSize = fontSizeDp,
                    modifier = Modifier
                        .align(Alignment.Center)
                        .clearAndSetSemantics { testTag = "PINEntry" }
                )
            }
        } else if (placeholder) {
            Icon(
                imageVector = Icons.Outlined.Circle,
                contentDescription = "",
...
